--- a/AndagonWebApp2/appsettings.Development.json
+++ b/AndagonWebApp2/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "MongoConnection": "mongodb://localhost:27017"
+  },
+  "MongoDatabase": "andagonapp"
 }
