--- a/AndagonWebApp2/appsettings.json
+++ b/AndagonWebApp2/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AndagonWebApp2-a46a64b3-78a3-470d-b363-947f912b02a0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MongoConnection": "mongodb://localhost:27017"
   },
+  "MongoDatabase": "andagonapp",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
